--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -78,7 +78,7 @@
       <view class="zan-dialog__mask" bindtap="toggleDialog" />
       <view class="zan-dialog__container">
         <view class="zan-cell dialog_detail">
-          <image src="{{chooseoptionthumb}}"></image>
+          <image src="{{chooseoptionthumb}}" style="width:80px;height:80px"></image>
           <text style="margin-right: 15px;">
             <text>{{good.title}}</text>\n
             <text class="zan-c-red zan-font-18">￥{{good.marketprice}}</text>
