--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,98 +1,71 @@
 /**index.wxss**/
 page{
-	background-color: #F9F9F9;
+  height: 100%;
+  touch-action:pan-x;
+  background-color: rgba(247,7,118,0.8);
+  top:0;
+  left:0;
+  right: 0;
+  bottom: 0;
 }
-.tab{
-	position: fixed;
-	left: 0;
-	top: 0;
-	z-index: 1;
+.container{
+ height: 100%;
 }
-::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-  color: transparent;
-}
-::-moz-scrollbar {
-  width: 0;
-  height: 0;
-  color: transparent;
-}
-.swiper{
-	margin-top:45px;
-	max-height: 200px;
-
-}
-.swiper-container{
-	height:200px;
-}
-
-.slide-image{
-
-	width: 100%;
-}
-.goods{
-	width: 48%;
-	height:250px;
-	padding: 1%;
-	float: left;
-}
-.goods image{
-	width: 100%;
-	height:200px;
-}
-.zan-c-gray-dark{
-	font-size: 12px;
-}
-.loading{
-	display: flex;
-	flex-direction: column;
-}
-
-/*轮播样式*/
-.swiper{
- position: relative;
-}
-.swiper .dots{
- position: absolute;
- left: 0;
- right: 0;
- bottom: 20rpx;
- display: flex;
- justify-content: center;
-}
-.swiper .dots .dot{
- margin: 0 8rpx;
- width: 14rpx;
- height: 14rpx;
- background:#fff;
- border-radius: 8rpx;
- transition: all .6s;
-}
-.swiper .dots .dot.active{
- width: 24rpx;
- background:#f80;
-  width: 28rpx;
- height: 14rpx;
-}
-
-.zan-loadmore--nodata,
-.zan-loadmore--nomore{
-  border-top: 2rpx solid #d1d1d1;
-  color: #999;
-}
-
-.zan-loadmore__dot {
+.bgimg{
   position: absolute;
-  left: 50%;
-  top: 10px;
-  margin-left: -2px;
-  margin-top: -2px;
-  content: "";
-  width: 4px;
-  height: 4px;
-  border-radius: 50%;
-  background-color: #d1d1d1;
-  display: inline-block;
-  vertical-align: middle;
+  top:0;
+  left: 0;
+  z-index:-5;
+  overflow: hidden;
+}
+.bgcover{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left:0;
+  right: 0;
+  bottom: 0;
+  background: -webkit-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(247,7,118,1)));
+  background: -moz-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(247,7,118,1)));
+  z-index:0;
+}
+swiper{
+  background: none;
+  overflow: visible;
+/*  background: gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));
+  background: -webkit-gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));
+  background: -moz-gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));*/
+}
+swiper-item{
+  text-align: center;
+  display: flex;
+  display: -webkit-flex; 
+  flex-direction: column-reverse;
+}
+.item-box{
+  width: 700rpx;
+  min-height: 400rpx;
+  background-color: white;
+  text-align: center;
+  margin:0px 10px;
+  margin-bottom:50rpx;
+  border-radius:10px;
+}
+
+.item-box image{
+  position: relative;
+  top: -100rpx;
+  border-radius: 2px;
+  width: 300rpx;
+  height:400rpx;
+  z-index: 20;
+}
+.item-box .text-area{
+  margin-bottom: 10px;
+  margin-top:-45px;
+}
+.text-area view{
+  margin:10px 0px;
+  padding:0px 10px;
+
 }
