--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,15 +1,15 @@
 <!--pages/order/order.wxml-->
 <import src="/dist/switch/index.wxml" />
 <view class="container">
-<navigator url="../../pages/address/address">
+<view bindtap="chooseAddress">
 	<view class="zan-panel" style="margin-top: 0px;">
 	<view class="zan-cell zan-cell--access">
 	
 		<view class="zan-cell__hd" style="margin-right: 5px;"><view class="zan-icon zan-icon-location" style="font-size: 18px;"></view></view>
 		<block wx:if="{{address}}">
 		<view class="zan-cell__bd">
-		<view class="zan-pull-up zan-font-16">收货人：{{address.name}}<text class="zan-pull-right">{{address.mobile}}</text></view>
-		<view class="zan-font-12 zan-c-gray-dark">收货地址：江苏大学本部 {{address.address}}</view>
+		<view class="zan-pull-up zan-font-16">收货人：{{address.userName}}<text class="zan-pull-right">{{address.telNumber}}</text></view>
+		<view class="zan-font-12 zan-c-gray-dark">收货地址： {{address.provinceName}} {{address.cityName}} {{address.countyName}} {{address.detailInfo}}</view>
 		</view>
 		<view class="zan-cell__ft"></view>
 		</block>
@@ -20,7 +20,7 @@
 
 	</view>
 	</view>
-		</navigator>
+		</view>
 	<!-- 收货地址结束 -->
 	<view class="zan-panel">
 	<view class="zan-cell panel-no-border">
@@ -28,7 +28,7 @@
 	<view class="zan-cell__bd">eshandz商城</view>
 	</view>
 	<view class="zan-cell panel-no-border" style="background-color: #f9f9f9;">
-	<view class="zan-cell__hd" style="margin-right: 5px;background-color: #F9F9F9"><image src="{{chooseoptionthumb}}" style="width: 200rpx;height: 200rpx"></image></view>
+	<view class="zan-cell__hd" style="margin-right:10px;background-color: #F9F9F9;"><image src="{{chooseoptionthumb}}" style="width:50px;height:50px"></image></view>
 	<view  class="zan-cell__hd">
 	<view class="zan-font-16"><view class="zan-pull-left" style="width: 80%;">{{good.title}}</view><view class="zan-c-red zan-pull-right" style="width: 20%;text-align: right;">￥{{good.marketprice}}</view></view>
 
@@ -44,7 +44,20 @@
 
 	<view class="zan-cell">
 	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;">留言</view>
-	<input class="zan-form__input zan-cell__bd zan-font-12" placeholder="点击给商家留言"/>	
+	<input class="zan-form__input zan-cell__bd zan-font-12" placeholder="点击给商家留言"/>
+	</view>
+	<view class="zan-cell">
+	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;">体验时间</view>
+	<picker mode="date" value="{{dateValue}}" start="{{currentTime}}" end="2999-12-12" bindchange="datePickerBindchange">
+	当前日期选择: {{dateValue}}
+	</picker>
+	</view>
+
+	<view class="zan-cell">
+	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;"></view>
+	<picker mode="time" value="{{timeValue}}" start="00:00" end="24:00" bindchange="timePickerBindchange">
+   当前时间选择: {{timeValue}}
+	</picker>
 	</view>
 
 
@@ -83,7 +96,7 @@
 	<!-- 费用介绍结束 -->
 	<view class="zan-panel btn-container" style="width: 100%">
 	<view class="tongji-btn zan-pull-left">合计：<text class="zan-c-red">￥{{good.marketprice * quantity}}</text></view>
-    <button class="zan-btn zan-btn--large zan-btn--danger zan-pull-right" style="width: 40%" bindtap="toggleDialog">提交<text wx:if="{{ actionId ==1 }}">体验</text><text wx:else>订单</text></button>
+    <button class="zan-btn zan-btn--large zan-btn--danger zan-pull-right" style="width: 40%" bindtap="orderPay">提交<text wx:if="{{ actionId ==1 }}">体验</text><text wx:else>订单</text></button>
 	</view>
 
 </view>
