--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,15 +1,16 @@
 /**index.wxss**/
 page{
-  height: 100%;
-  touch-action:pan-x;
-  background-color: rgba(247,7,118,0.8);
-  top:0;
-  left:0;
-  right: 0;
-  bottom: 0;
+  position: relative;
+  height:100vh;
+  overflow: hidden;
+  background-color: rgb(105,105,105);
 }
 .container{
- height: 100%;
+   height:100vh;
+   overflow: hidden;
+}
+scroll-view{
+height: 100vh;
 }
 .bgimg{
   position: absolute;
@@ -17,21 +18,25 @@ page{
   left: 0;
   z-index:-5;
   overflow: hidden;
+  width: 100%;
+  max-height:100vh;
 }
 .bgcover{
   width: 100%;
+  height:100vh;
   position: absolute;
   top: 0;
   left:0;
-  right: 0;
-  bottom: 0;
-  background: -webkit-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(247,7,118,1)));
-  background: -moz-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(247,7,118,1)));
+  background: -webkit-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(105,105,105,1)));
+  background: -moz-gradient(linear,0 0,0 300,from(rgba(225,225,225,0)),to(rgba(105,105,105,1)));
   z-index:0;
 }
 swiper{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  bottom: 0;
   background: none;
-  overflow: visible;
 /*  background: gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));
   background: -webkit-gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));
   background: -moz-gradient(linear,0 0,0 300,from(rgba(0,0,0,0)),to(rgba(247,7,118,1)));*/
@@ -44,20 +49,19 @@ swiper-item{
 }
 .item-box{
   width: 700rpx;
-  min-height: 400rpx;
+  min-height: 500rpx;
   background-color: white;
   text-align: center;
   margin:0px 10px;
-  margin-bottom:50rpx;
+  margin-bottom:60rpx;
   border-radius:10px;
 }
 
 .item-box image{
   position: relative;
   top: -100rpx;
-  border-radius: 2px;
+  border-radius: 5px;
   width: 300rpx;
-  height:400rpx;
   z-index: 20;
 }
 .item-box .text-area{
@@ -68,4 +72,13 @@ swiper-item{
   margin:10px 0px;
   padding:0px 10px;
 
+}
+.name{
+  position: absolute;
+  top:30rpx;
+  left:50rpx;
+  font-size:20px;
+  color:white;
+  font-family: "sans-serif";
+  z-index: 50;
 }
