--- a/pages/member/member.wxss
+++ b/pages/member/member.wxss
@@ -1,7 +1,12 @@
 /* pages/member/member.wxss */
 page{
 	background-color: #F9F9F9;
+  height: 100vh;
 }
+scroll-view{
+  height: 100vh;
+}
+
 .userinfo {
   display: flex;
   flex-direction: column;
@@ -28,4 +33,8 @@ page{
   height:100rpx;
   background: #ddd;
   border-radius: 4px;
+}
+.zan-badge__count{
+  top: 0;
+  right: 15rpx;
 }
