--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -1,5 +1,7 @@
 <!--pages/order/order.wxml-->
 <import src="/dist/switch/index.wxml" />
+<import src="/dist/toptips/index.wxml" />
+<template is="zan-toptips" data="{{ zanTopTips }}"></template>
 <view class="container">
 <view bindtap="chooseAddress">
 	<view class="zan-panel" style="margin-top: 0px;">
@@ -25,14 +27,14 @@
 	<view class="zan-panel">
 	<view class="zan-cell panel-no-border">
 	<view class="zan-cell__hd" style="margin-right: 5px;"><view class="zan-icon zan-icon-store" style="font-size: 18px;"></view></view>
-	<view class="zan-cell__bd">eshandz商城</view>
+	<view class="zan-cell__bd">e衫商城</view>
 	</view>
 	<view class="zan-cell panel-no-border" style="background-color: #f9f9f9;">
 	<view class="zan-cell__hd" style="margin-right:10px;background-color: #F9F9F9;"><image src="{{chooseoptionthumb}}" style="width:50px;height:50px"></image></view>
 	<view  class="zan-cell__hd">
-	<view class="zan-font-16"><view class="zan-pull-left" style="width: 80%;">{{good.title}}</view><view class="zan-c-red zan-pull-right" style="width: 20%;text-align: right;">￥{{good.marketprice}}</view></view>
+	<view class="zan-font-16"><view class="zan-pull-left" style="width: 70%;">{{good.title}}</view><view class="zan-c-red zan-pull-right" style="width: 20%;text-align: right;">￥{{good.marketprice}}</view></view>
 
-	<view class="zan-font-12 zan-c-gray-dark"><view class="zan-pull-left" style="width: 80% ">规格：黑色+175</view><view class="zan-pull-right" style="width: 20%;text-align: right;">×{{quantity}}</view></view>
+	<view class="zan-font-12 zan-c-gray-dark"><view class="zan-pull-left" style="width: 70% ">规格：{{spec}}</view><view class="zan-pull-right" style="width: 20%;text-align: right;">×{{total}}</view></view>
 	</view>
 	</view>
 
@@ -44,27 +46,21 @@
 
 	<view class="zan-cell">
 	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;">留言</view>
-	<input class="zan-form__input zan-cell__bd zan-font-12" placeholder="点击给商家留言"/>
+	<input class="zan-form__input zan-cell__bd zan-font-12" bindinput="bindKeyInput" placeholder="点击给商家留言"/>
 	</view>
 	<view class="zan-cell">
-	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;">体验时间</view>
-	<picker mode="date" value="{{dateValue}}" start="{{currentTime}}" end="2999-12-12" bindchange="datePickerBindchange">
-	当前日期选择: {{dateValue}}
+	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;">体验</view>
+	<picker mode="date" value="{{dateValue}}" style="width:20vh" start="{{currentTime}}" end="2999-12-12" bindchange="datePickerBindchange"><text hidden="{{dateValue}}">日期选择:</text> {{dateValue}}
+	</picker>
+	<picker value="{{index}}" range="{{array}}" style="width:20vh" bindchange="bindPickerChange"><text hidden="{{array[index]}}">时间选择: </text>
+   {{array[index]}}
 	</picker>
 	</view>
-
-	<view class="zan-cell">
-	<view class="zan-cell__hd zan-font-12" style="margin-right: 100rpx;"></view>
-	<picker mode="time" value="{{timeValue}}" start="00:00" end="24:00" bindchange="timePickerBindchange">
-   当前时间选择: {{timeValue}}
-	</picker>
-	</view>
-
 
 	<view class="zan-cell">
 	<view class="zan-cell__hd zan-font-12" style="margin-right: 5px;">合计</view>
 	<view class="zan-cell__bd"></view>
-	<view class="zan-cell__ft zan-c-red zan-font-12">￥{{good.marketprice * quantity}}</view>
+	<view class="zan-cell__ft zan-c-red zan-font-12">￥{{good.marketprice * total}}</view>
 	</view>
 
 	</view>
@@ -87,7 +83,7 @@
 	<!-- 开启通知结束 -->
 	<view class="zan-panel">
 	<view class="panel-no-border zan-cell zan-font-12">
-	<view class="zan-cell__bd">商品金额</view><view class="zan-cell__ft">￥{{good.marketprice * quantity}}</view>	
+	<view class="zan-cell__bd">商品金额</view><view class="zan-cell__ft">￥{{good.marketprice * total}}</view>	
 	</view>
 	<view class="panel-no-border zan-cell zan-font-12">
 	<view class="zan-cell__bd">运费</view><view class="zan-cell__ft">+￥0</view>	
@@ -95,8 +91,18 @@
 	</view>
 	<!-- 费用介绍结束 -->
 	<view class="zan-panel btn-container" style="width: 100%">
-	<view class="tongji-btn zan-pull-left">合计：<text class="zan-c-red">￥{{good.marketprice * quantity}}</text></view>
-    <button class="zan-btn zan-btn--large zan-btn--danger zan-pull-right" style="width: 40%" bindtap="orderPay">提交<text wx:if="{{ actionId ==1 }}">体验</text><text wx:else>订单</text></button>
+	<view class="tongji-btn zan-pull-left">合计：<text class="zan-c-red">￥{{good.marketprice * total}}</text></view>
+    <button class="zan-btn zan-btn--large zan-btn--danger zan-pull-right {{click=='on'?'': 'btn-on'}}" style="width: 40%" bindtap="orderPay">提交<text wx:if="{{ actionId =='experience' }}">体验</text><text wx:else>订单</text></button>
 	</view>
+
+
+	<view class="loading_box" hidden="{{loadbox}}">
+ 	 <view class="pulse pulse_1"></view>
+ 	 <view class="pulse pulse_2"></view>
+ 	 <view class="pulse pulse_3"></view>
+ 	 <view class="pulse pulse_4"></view>
+	</view>
+
+
 
 </view>
